--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SecureGuard - Security Services</title>
-</head>
+  <title>Sanic Security Services</title>
+  
+  <link rel="icon" type="image/png" href="/src/assets/sanic-log.png" sizes="64x64">
+  
+  <link rel="icon" href="/favicon.ico">
+  
+  </head>
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
